objects/SurveyQuestionResponse__c.object
<CustomObject><fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields><fields>
        <fullName>SurveyTaker__c</fullName>
        <label>SurveyTaker</label>
        <referenceTo>SurveyTaker__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>Survey_Question__c</fullName>
        <label>Survey Question</label>
        <referenceTo>Survey_Question__c</referenceTo>
        <relationshipName>Survey_Question_Answers</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><fields>
        <fullName>of_Time_Question_was_Responded_to__c</fullName>
        <defaultValue>1</defaultValue>
        <label># of Time Question was Responded to</label>
        <precision>1</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>false</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Survey Question Response</label><nameField>
        <displayFormat>Response-{0000000}</displayFormat>
        <label>Response ID</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>Survey Question Responses</pluralLabel><sharingModel>ControlledByParent</sharingModel></CustomObject>